// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       Leandro 
    </h1>
    <h3>
      Martello
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Mafia, Duke Nukem, Assasins Creed
    </p>
    <p>
      4
    </p>
    <h1>
      Activo
    </h1>
    <p>
      ABC123
    </p>
    <p>
      Argentina
    </p>
    <p>
      Objeto literal
    </p>
    <p
      style="background-color: lightgreen; border-radius: 10px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC123","country":"Argentina"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     Leandro 
  </h1>
  <h3>
    Martello
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Mafia, Duke Nukem, Assasins Creed
  </p>
  <p>
    4
  </p>
  <h1>
    Activo
  </h1>
  <p>
    ABC123
  </p>
  <p>
    Argentina
  </p>
  <p>
    Objeto literal
  </p>
  <p
    style="background-color: lightgreen; border-radius: 10px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC123","country":"Argentina"}
  </p>
</div>
`;
